[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/BadMob.gd" type="Script" id=1]
[ext_resource path="res://img/snek-3.png" type="Texture" id=2]
[ext_resource path="res://img/snek-4.png" type="Texture" id=3]
[ext_resource path="res://img/snek-0.png" type="Texture" id=4]
[ext_resource path="res://img/snek-1.png" type="Texture" id=5]
[ext_resource path="res://img/snek-2.png" type="Texture" id=6]
[ext_resource path="res://audio/snake-hissing-6092.mp3" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 17.5 )

[node name="SnekMobRigidBody2D" type="RigidBody2D"]
collision_layer = 6
collision_mask = 5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="SnekMobAnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="SnekMobCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12.5 )
shape = SubResource( 2 )

[node name="SnekMobVisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -1.5 )
scale = Vector2( 1, 2.95 )

[node name="HissAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="." to="." method="_on_SnekMobRigidBody2D_body_entered"]
[connection signal="hit" from="." to="." method="_on_SnekMobRigidBody2D_hit"]
[connection signal="screen_exited" from="SnekMobVisibilityNotifier2D" to="." method="_on_SnekMobVisibilityNotifier2D_screen_exited"]
